--- a/lab4/src/makefile
+++ b/lab4/src/makefile
@@ -9,17 +9,14 @@ mem: process_memory.c
 parallel_min_max: utils.o find_min_max.o utils.h find_min_max.h
 	$(CC) -o parallel_min_max utils.o find_min_max.o parallel_min_max.c $(CFLAGS)
 
-par_sum: parallel_sum.o utils.o libsum.a
-	$(CC) -o par_sum parallel_sum.o utils.o -L. -lsum -lpthread
+par_sum: sum.o utils.o
+	$(CC) -o par_sum utils.o sum.o -pthread parallel_sum.c $(CFLAGS)
 
 utils.o: utils.h
 	$(CC) -o utils.o -c utils.c $(CFLAGS)
 
 find_min_max.o: utils.h find_min_max.h
 	$(CC) -o find_min_max.o -c find_min_max.c $(CFLAGS)
-
-libsum.a: sum.o
-	ar cr libsum.a sum.o
 
 sum.o: sum.c
 	$(CC) -o sum.o -c sum.c
